# Amenly-Product

./: .env.example  .gitignore  AI_COMPLIANCE_BUTTONS_UPDATED.md  AI_COMPLIANCE_UPGRADE_COMPLETE.md  ALL_WARNINGS_FIXED_FINAL.md  AUDIT_REPORT.md  BUG_FIXES_COMPLETE.md  CLEANUP_TASKS.md  CODEBASE_ANALYSIS.md  CONSOLE_ERRORS_EXPLAINED.md  CONSOLE_WARNINGS_FIXED.md  DASHBOARD_COLOR_UPDATE.md  DASHBOARD_ERROR_FIX.md  DASHBOARD_UPGRADE_COMPLETE.md  DASHBOARD_VISUAL_GUIDE.md  DEPLOYMENT_SUMMARY.md  EXTENSION_ERROR_INFO.md  FOOTER_ADDED_TO_ALL_PAGES.md  FOOTER_ANIMATIONS_COMPLETE.md  FRAMEWORKS_API_SUMMARY.md  FRAMEWORKS_API_TEST_RESULTS.md  FRAMEWORKS_COMPLETE.md  FRAMEWORK_ASSOCIATION_API.md  FRAMEWORK_ENHANCEMENT_COMPLETE.md  HARD_REFRESH_INSTRUCTIONS.md  ICONS_UPGRADE_AR.md  ICONS_UPGRADE_COMPLETE.md  IMPLEMENTATION_NOTES.md  INFRASTRUCTURE_MAP_ANIMATION.md  MAKEFILE_ENHANCEMENT.md  MANY_TO_MANY_MIGRATION_COMPLETE.md  Makefile  OVERFLOW_FIXES_COMPLETE.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_SUMMARY.md  PERMISSIONS_SYSTEM_COMPLETE.md  PRODUCTION_FIXES_COMPLETE.md  PRODUCTION_OPTIMIZATION_COMPLETE.md  PRODUCTION_OPTIMIZATION_PLAN.md  PROFESSIONAL_AUDIT_REPORT.md  (+20 more)
backend/: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEAN_OUTPUT.md  CONTRIBUTING.md  Dockerfile  ENDPOINT_TEST_RESULTS.md  FINAL_SUCCESS.md  FRAMEWORKS_API_GUIDE.md  FRAMEWORK_METADATA_UPDATE.md  INSTALLATION_NOTES.md  INSTALLATION_SPEED_FIX.md  MAKE_RUN_FIX.md  Makefile  PHASE_2_IMPLEMENTATION.md  POETRY_SETUP_COMPLETE.md  PYTHON_313_MIGRATION.md  QUICKSTART.md  RAG_COMPLETE_GUIDE.md  RAG_IMPLEMENTATION_PLAN.md  RAG_IMPLEMENTATION_STATUS.md  RAG_QUICK_START.md  RAG_SESSION_SUMMARY.md  RAG_SYSTEM_COMPLETE_GUIDE.md  README.md  SETUP_SUCCESS.md  SWAGGER_USAGE_GUIDE.md  TESTING_INSTRUCTIONS.md  TEST_REPORT.md  TEST_RESULTS_AUTH.md  TEST_RESULTS_FINAL.md  TOKEN_REVOCATION_FIX.md  TOKEN_REVOCATION_TEST.md  advanced_api_tester.py  alembic.ini  api_test_runner.py  api_tester_curl.sh  api_tester_full_curl.sh  (+35 more)
backend/alembic/: env.py
backend/alembic/versions/: 1f372c50aca1_add_framework_type_category_and_metadata.py  5cbae36f3596_create_user_role_permissions_table_.py  952e97e2aa29_remove_is_superuser_column.py  a4fe99fdaebb_initial_schema.py  add_permissions_and_chat_system.py  b7f3a1c2d9e4_add_org_invite_codes_and_join_requests.py  c1d4e7f2a9b3_make_invite_code_single_use_nullable.py  d2e5f8a1b4c6_add_org_company_profile.py  dfdc0978922d_drop_obsolete_trigger_and_function.py  e1a2b3c4d5f6_assessment_campaign_infra_map_cve.py  f2b3c4d5e6a7_add_answer_regulation_score.py  f377d337324f_add_user_role_permissions_table.py  f52949bac1f6_cleanup_redundant_tables_and_fix_.py  remove_org_from_frameworks.py
backend/app/: main.py
backend/app/ai/cve/: detection.py  nvd_service.py
backend/app/ai/embeddings/: __init__.py  embedding_service.py
backend/app/ai/llm/: __init__.py  (+2 more)
backend/app/assessments/: conversation.py  evaluation.py  question_generator.py  router.py  schemas.py  service.py
backend/app/assets/: router.py  service.py  vulnerability_service.py
backend/app/auth/: dependencies.py  permissions.py  repository.py  router.py  schemas.py  security.py  service.py  token_manager.py
backend/app/core/: config.py  logging.py  rate_limit.py
backend/app/dashboard/: router.py
backend/app/database/: base.py  session.py
backend/app/models/: assessments.py  assets_risks.py  chat.py  compliance.py  enums.py  identity.py  permissions.py
backend/app/organizations/: repository.py  router.py  service.py
backend/app/schemas/: assets_risks.py  compliance.py  identity.py  permissions.py
backend/app/websocket/: manager.py  router.py
backend/requirements/: base.txt  dev.txt
backend/scripts/: README.md  api_smoke_test.sh  check_installation.sh  ingest_frameworks.py  scrape_nist.py  scrape_web.py  seed_demo.py
backend/scripts/data/: framework_corpus.json  regulations_corpus.json
backend/tests/: conftest.py  pytest.ini
backend/tests/assessments/: test_campaign_api.py  test_evaluation_unit.py
backend/tests/assets/: test_vuln_map_api.py
backend/tests/auth/: test_login.py  test_register.py
backend/tests/cve/: test_cve_unit.py
backend/tests/integration/: test_full_user_flow.py
backend/tests/organizations/: test_org_hierarchy.py
backend/tests/users/: test_get_users.py
backend/tests/utils/: auth.py  client.py  factories.py
(+314 files in other folders)
